# nonogram_game_ocaml

./: .ocamlformat  README.md  dune-project  nonogram.opam
.github/workflows/: ci.yml
graphic/: cross.ppm  grey_heart.ppm  heart.ppm  lose.ppm  next_level.ppm  win.ppm
levels/: 1.json  2.json
lib/: drawer_lib.ml  dune  game_logic.ml  image_generator.ml  math.ml  ppm_parser.ml
test/: dune  test_nonogram.ml
